[project]
name = "batchbrake"
version = "0.2.0"
description = "Generate HandBrake batch encode scripts for mkv files"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
batchbrake = "batchbrake.cli:main"
 
[tool.hatch.build.targets.wheel]
packages = ["src/batchbrake"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
